index configirado para empezar

--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
   "homepage": "https://github.com/nixonbmx/mi_pagina_web#readme",
   "devDependencies": {
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.0.2",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1"
   }
 }
