--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.5.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1"
   }
