--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "mi primera pagina web",
   "main": "index.html",
   "scripts": {
-    "dev": "lite-server"
+    "dev": "lite-server",
+    "start": "concurrently \" npm run watch:scss\" \"npm run dev\"",
+    "scss": "node-sass -o css/  css/",
+    "watch:scss": "onchange \"css/*.scss\"  -- npm run scss ",
+    "clean": "rimraf dist",
+    "imagemin": "imagemin \"images/*\" --out-dir  dist/images",
+    "usemin": "usemin index.html --dest dist --output dist/index.html"
+   
   },
   "repository": {
     "type": "git",
@@ -17,12 +24,22 @@
   },
   "homepage": "https://github.com/nixonbmx/mi_pagina_web#readme",
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "copyfiles": "^2.4.1",
+    "cssmin": "^0.4.3",
+    "htmlmin": "0.0.7",
+    "lite-server": "^2.6.1",
+    "node-sass": "^6.0.1",
+    "onchange": "^7.1.0",
+    "rimraf": "^3.0.2",
+    "uglify-js": "^3.14.1",
+    "uglifyjs": "^2.4.11",
+    "usemin-cli": "^0.6.0"
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
+    "concurrently": "^6.2.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1"
   }
