--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.html",
   "scripts": {
     "dev": "lite-server",
+    "test": "echo \" Error: no test specified\" && exit 1",
     "start": "concurrently \" npm run watch:scss\" \"npm run dev\"",
     "scss": "node-sass -o css/  css/",
     "watch:scss": "onchange \"css/*.scss\"  -- npm run scss ",
     "clean": "rimraf dist",
     "imagemin": "imagemin \"images/*\" --out-dir  dist/images",
-    "usemin": "usemin index.html --dest dist --output dist/index.html"
-   
+    "usemin": "usemin index.html -d dist --htmlmin -o dist/index.html  && usemin about.html -d dist --htmlmin -o dist/about.html  && usemin productos.html -d dist --htmlmin -o dist/productos.html && usemin contacto.html -d dist --htmlmin -o dist/contacto.html",
+    "build": "npm run clean && npm run scss && npm run imagemin && npm run usemin"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,8 @@
   "devDependencies": {
     "copyfiles": "^2.4.1",
     "cssmin": "^0.4.3",
+    "grunt": "^1.4.1",
+    "grunt-contrib-sass": "^2.0.0",
     "htmlmin": "0.0.7",
     "lite-server": "^2.6.1",
     "node-sass": "^6.0.1",
@@ -41,6 +44,8 @@
     "bootstrap-icons": "^1.5.0",
     "concurrently": "^6.2.0",
     "jquery": "^3.6.0",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "usemin": "^0.6.0",
+    "usermin": "^1.6.0-r7"
   }
 }
